# metnum-tp2

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
examples/: ego-facebook-filtered.feat  ego-facebook-sorted.txt  exercise1b.txt  fb_similarity.txt  fb_similarity_v2.txt  karateclub_laplacian.txt  scratch.txt  test_deflation_1.txt  test_deflation_2.txt  test_deflation_3.txt
examples/autogen/: matrix_10.txt  matrix_15.txt  matrix_20.txt  matrix_25.txt  matrix_30.txt  matrix_40.txt  matrix_50.txt
graphs/: centrality.dot
results/: 3b1b_eigenValues.csv  3b1b_eigenVectors.csv  3b1b_similarityMatrix.csv  exercise1b.txt_eighenval  exercise1b.txt_eighenvec  exercise1b_eigenValues.csv  exercise1b_eigenVectors.csv  exercise1b_similarityMatrix.csv  facebook_adjacency.txt  karateClub_eigenValues.csv  karateClub_eigenVectors.csv  karateclub.txt  karateclub_eigenValues.csv  karateclub_eigenVectors.csv  karateclub_laplacian_eigenValues.csv  karateclub_laplacian_eigenVectors.csv  karateclub_proximity.txt  karateclub_similarityMatrix.csv  resolverEnComputadora1_eigenValues.csv  resolverEnComputadora1_eigenVectors.csv  resolverEnComputadora1_similarityMatrix.csv  test_deflation_0_eigenValues.csv  test_deflation_1_eigenValues.csv  test_deflation_1_eigenVectors.csv  test_deflation_2_eigenValues.csv  test_deflation_2_eigenVectors.csv  test_deflation_3_eigenValues.csv  test_deflation_3_eigenVectors.csv
results/autogen/: cpp  matrix_10_eigenValues.csv  matrix_10_eigenValues_LEQ.csv  matrix_10_eigenVectors.csv  matrix_10_similarityMatrix.csv  matrix_15_eigenValues.csv  numpy  (+10 more)
(+30 files in other folders)
